--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     #preview_to_print {
         margin: 5px;
-        font-size: 1.75vh;
+        font-size: 6px;
         font-family: arial;
         min-width: 101.47px;
         max-width: 101.47px;
@@ -85,6 +85,8 @@
 </body>
 
 <script>
+
+    document.title = cityName + ' | Anmeldungformular für Baumwidmung'
 
     const startText = 'Anmeldungformular für Baumwidmung<br><br>Vorschau<br><br><div class="preview" style="background-color:#eee; text-align:center">' + cityName + '<br>' + initiativeName + '<br><br>-<br>-<br><br><b>-</b><br><br>-<br>-<br>-</div>';
 
